--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,67 +22,110 @@
         </div>
         <div class="right-navbar">
             <ul class="ul-nav-links-navbar">
-                <li class="li-nav-links-navbar"><a href="#">Home</a></li>
-                <li class="li-nav-links-navbar"><a href="#">More</a></li>
-                <li class="li-nav-links-navbar"><a href="#">Contact</a></li>
+                <li class="li-nav-links-navbar"><a href="#">Hem</a></li>
+                <li class="li-nav-links-navbar"><a href="#">Mer</a></li>
+                <li class="li-nav-links-navbar"><a href="#">Kontakt</a></li>
             </ul>
         </div>
     </section>
     <section class="sidebar" id="sidebar">
         <div class="sidebar-top">
             <div class="sidebar-top-top">
-                <img src="./assets/icons/close-icon.svg" alt="close" id="closeSidebar">
+                <img src="./assets/icons/close-icon.svg" alt="stäng" id="closeSidebar">
             </div>
             <div class="sidebar-top-bottom">
-                <h1>Sidebar</h1>
+                <h1>Sidomeny</h1>
             </div>
         </div>
         <div class="sidebar-bottom">
             <ul class="sidebar-bottom-ul">
-                <li><a href="">djakdlj</a></li>
-                <li><a href="">djakdlj</a></li>
-                <li><a href="">djakdlj</a></li>
+                <li><a href="#">Länk 1</a></li>
+                <li><a href="#">Länk 2</a></li>
+                <li><a href="#">Länk 3</a></li>
             </ul>
         </div>
     </section>
     <section class="hero">
         <div class="top-slider-container">
-            <h1>The History of the Web from 2005 to 2009</h1>
+            <h1>Webbens Historia från 2005 till 2009</h1>
         </div>
         <div class="slider-container">
-            <button class="slider-container-left-btn"><img src="assets/icons/back-arrow.svg" alt="back-arrow"></button>
+            <button class="slider-container-left-btn"><img src="assets/icons/back-arrow.svg" alt="bakåt-pil"></button>
             <div class="slider" id="slider">
-                <!-- Slider images will be inserted here by JavaScript -->
+                <!-- Image showing social media explosion -->
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/Timeline_of_social_media.svg/1200px-Timeline_of_social_media.svg.png" alt="Sociala Mediers tillväxt" />
+                <!-- Image showing iPhone launch -->
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fa/IPhone_Front.svg/1200px-IPhone_Front.svg.png" alt="iPhone lansering 2007" />
+                <!-- Image showing Cloud Computing -->
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/56/Cloud_computing.svg/1920px-Cloud_computing.svg.png" alt="Cloud Computing" />
             </div>
-            <button class="slider-container-right-btn"><img src="assets/icons/forward-arrow.svg" alt="forward-arrow"></button>
+            <button class="slider-container-right-btn"><img src="assets/icons/forward-arrow.svg" alt="framåt-pil"></button>
         </div>
     </section>
     <section class="first-info">
         <div class="first-info-top">
             <div>
-                <img class="first-info-img" src="https://picsum.photos/200/300" alt="oadkpda">
+                <img class="first-info-img" src="./assets/images/facebook-4.svg" alt="Facebook ikon 2005">
             </div>
             <div>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt sed praesentium illum dolore,Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, hic. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur, quasi!</p>
+                <p>Mellan 2005 och 2009 förändrades webben dramatiskt. Web 2.0 gjorde det möjligt för användare att skapa och dela innehåll, vilket ledde till framväxten av sociala medier som Facebook, YouTube och Twitter. Plattformar för användargenererat innehåll revolutionerade online-interaktioner.</p>
             </div>
         </div>
         <div class="first-info-bottom">
             <div>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta quasi harum vel qui?Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, quae.</p>
+                <p>Smartphones som iPhone, lanserad 2007, förändrade hur människor använde internet, med mobilsurfning och appar som blev allt vanligare. Den här perioden lade grunden för dagens mobila webbnavigering och responsive design.</p>
             </div>
             <div>
-                <img class="first-info-img" src="https://picsum.photos/200/300" alt="oadkpda">
+                <img class="first-info-img" src="./assets/images/iphone4.jpg" alt="iPhone 4">
+            </div>
+        </div>
+    </section>
+    <section class="third-info">
+        <div class="third-info-div">
+            <div class="third-info-img-div">
+                <img src="./assets/images/html5.png" alt="HTML5 logga">
+            </div>
+            <div class="third-info-p-div">
+                <p>Webbteknologier som AJAX och jQuery gjorde det möjligt att skapa mer dynamiska och interaktiva webbapplikationer.</p>
+            </div>
+        </div>
+        <div class="third-info-div">
+            <div class="third-info-img-div">
+                <img src="./assets/images/Google_Drive_icon_(2020).svg.png" alt="Google Docs logo">
+            </div>
+            <div class="third-info-p-div">
+                <p>Cloud computing började växa, med tjänster som Google Docs och Amazon Web Services (AWS), vilket möjliggjorde molnbaserat arbete och lagring.</p>
+            </div>
+        </div>
+        <div class="third-info-div">
+            <div class="third-info-img-div">
+                <img src="./assets/images/Google__G__logo.svg.png" alt="Google logotyp 2005">
+            </div>
+            <div class="third-info-p-div">
+                <p>Sökmotorer, särskilt Google, dominerade marknaden och förändrade hur information hittades online. SEO blev en kritisk strategi för företag.</p>
             </div>
         </div>
     </section>
     <section class="second-info">
         <div>
-            <img src="https://picsum.photos/700/350" alt="">
+            <img src="./assets/images/amazon.png" alt="Amazon logotyp">
         </div>
         <div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla ipsam ea ut optio facilis porro, fuga, nostrum aliquid eos, quisquam officia dolor exercitationem delectus. Et sunt ad quidem. Voluptates qui ullam quo, adipisci error enim aliquam inventore molestias esse ipsa possimus assumenda quod corrupti iste deleniti nemo. Laborum sed itaque nesciunt autem repellat officiis laboriosam maxime placeat, asperiores tempore et!</p>
+            <p>Denna period präglades av snabb utveckling inom e-handel, sociala medier och onlinesäkerhet. Amazon expanderade snabbt inom e-handel, medan Google och Facebook blev ledande inom riktad onlineannonsering, vilket lade grunden för dagens datadrivna reklammodeller.</p>
         </div>
     </section>
+    <footer>
+        <div class="footer-top">
+            <ul>
+                <li><a href="#">Hem</a></li>
+                <li><a href="#">Mer</a></li>
+                <li><a href="#">Kontakt</a></li>
+            </ul>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; Copyright 2024 - Alla Rättigheter Förbehållna</p>
+        </div>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
